--- a/算法设计与分析/基本概念.md
+++ b/算法设计与分析/基本概念.md
@@ -1,6 +1,12 @@
+算法是对特定问题**求解步骤**的一种描述，是指令的**有限序列**，需要满足**有穷性，确定性，可行性**
+
+贪心法把一个复杂问题分解为一系列较为简单的**局部最优选择**，每一步选择都是对当前解的一个扩展，直至获得问题的完整解。
+
 **概率算法**把“对于所有合理的输入都必须给出正确的输出”这个条件放宽，允许算法在执行过程中随机选择下一步该如何进行，同时允许结果以较小的概率出现错误，并以此为代价，获得算法运行的时间大幅减小
 
 
+
+自堆顶至叶子的调整过程称为**筛选**
 
 
 
